# jenkins-fire-cli

./: README.md  pyproject.toml
jenkins_fire_cli/: config.py  init.py  main.py  run.py
